# What is pyproject.toml file for?
# https://stackoverflow.com/questions/62983756/what-is-pyproject-toml-file-for

[tool.poetry]
name = "chat-todo-plugin"
version = "0.1.0"
description = "Plugin for managing a TODO list"
authors = ["lencx <cxin1314@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
